ecmascript/parser/tests/test262-error-references/fail/9cbce7d794e8d679.js.stderr
error: A `set` accessor must have a corresponding `get` accessor
 --> $DIR/tests/test262-parser/fail/9cbce7d794e8d679.js:1:11
  |
1 | class A { set prop() {} }
  |           ^^^

